Bug 75557 - OLE Objects of type .zip not being preserved in RT
Summary: OLE Objects of type .zip not being preserved in RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-27 07:02 UTC by Tushar Bende
Modified: 2014-03-05 12:24 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Document contains 3 ole objects (546.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-27 07:02 UTC, Tushar Bende
Details
Document contains single ole object (279.92 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-05 06:21 UTC, Tushar Bende
Details
Document contains single ole object roundtripped after code fix (273.29 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-05 06:21 UTC, Tushar Bende
Details
Document contains single ole object roundtripped before code fix (273.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-05 06:22 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-02-27 07:02:26 UTC
Created attachment 94799 [details]
Document contains 3 ole objects

Create document in Ms word by adding OLE objects.
open that file in Libreoffice and save it back to docx (Roundtripping).
Now open this file in MS word 

Expected: OLE objects should be there inside doc.
Actual: OLE object not getting preserved during roundtripping.
Comment 1 Tushar Bende 2014-03-05 06:21:18 UTC
Created attachment 95135 [details]
Document contains single ole object
Comment 2 Tushar Bende 2014-03-05 06:21:51 UTC
Created attachment 95136 [details]
Document contains single ole object roundtripped after code fix
Comment 3 Tushar Bende 2014-03-05 06:22:14 UTC
Created attachment 95137 [details]
Document contains single ole object roundtripped before code fix
Comment 4 Tushar Bende 2014-03-05 06:23:49 UTC
Document containing ole object if RoundTripped then after Roundtripping the OLE object was not working.
Which means if doc contains .zip file as ole object then after RoundTripping that .zip object was not getting opened .

Reason found that it was because of missing o:title attribute during RoundTrip for <v:imagedata> inside <v:shape>.
Verified that code changes working for other ole objects as well which are: Equations ,Excel Sheet and .zip.
Comment 5 Commit Notification 2014-03-05 10:23:41 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b7b64f26b9ef4ed717506f689d6d870305cb2bb

fdo#75557 : OLE Objects of type .zip not being preserved in RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.