fdo#75557 : OLE Objects of type .zip not being preserved in RT

Problem was Document containing ole object if RoundTripped then after Roundtripping the OLE object was not working.
Which means if doc contains .zip file as ole object then after RoundTripping that .zip object was not getting opened .

Reason found that it was because of missing o:title attribute during RoundTrip for <v:imagedata> inside <v:shape>.

XML file difference :
        In document.xml,
        Before - <v:shape id="ole_rId2" style="width:72pt;height:40.3pt" o:ole="">
                   <v:imagedata r:id="rId3" />
                 </v:shape>
	After -  <v:shape id="ole_rId2" style="width:72pt;height:40.3pt" o:ole="">
                   <v:imagedata r:id="rId3" o:title="" />
                 </v:shape>

Verified that code changes working for other ole objects as well which are: Equations ,Excel Sheet and .zip.

Change-Id: I813de38bcd6e334ce38a661fdfcfa434ef246ed0
Reviewed-on: https://gerrit.libreoffice.org/8458
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>